chore: code cleanups